[package]
name = "datafed"
authors = [
    "Blake Nedved <nedvedba@ornl.gov>",
    "Joshua Brown <brownjs@ornl.gov>",
    "Aaron Perez <perezam@ornl.gov>",
]
version = "0.1.0"
edition = "2024"
default-run = "datafed-core"

[workspace]
members = ["crates/*"]

[dependencies]
datafed-core-api = { path = "crates/core-api" }
datafed-database = { path = "crates/database" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
tracing-loki = { version = "0.2.6", default-features = false, features = [
    "rustls",
    "compat-0-2-1",
] }
anyhow = "1.0.98"

[[bin]]
name = "datafed-core"
path = "src/core.rs"
required-features = []

[[bin]]
name = "migrate"
path = "src/migrate.rs"
required-features = ["datafed-database/migrations"]
